Name:           PetersEngine
Version:        0.0.1
Cabal-Version:  >= 1.10
Category:       Game
Synopsis:       A simple graphics and game engine for personal use.
Description:    This is used as a framework to create test-beds for my ideas.
License:        BSD3
License-File:   LICENSE
Author:         Peter Higley <phigley@gmail.com>
Maintainer:     Peter Higley <phigley@gmail.com>
Homepage:       http://github.com/phigley/PetersEngine
Build-Type:     Custom  

Executable drawlines_engine_use
  default-language : Haskell2010
  main-is:         draw_lines.hs
  hs-source-dirs:  src
  build-depends:   base == 4.*,
                   OpenGL,
                   GLFW-b,
                   Vec,
                   mtl
  other-modules:   Graphics.UI.Engine

executable simple
  default-language : Haskell2010
  build-depends:   
                   base >= 4,
                   OpenGL,
                   GLFW-b,
                   Vec,
                   mtl
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  src 
  main-is:         simple.hs
  other-modules:   Graphics.UI.Engine

